NetBSD Problem Report #22457

Received: (qmail 7677 invoked by uid 605); 12 Aug 2003 18:52:35 -0000
Message-Id: <200308121852.h7CIqVW4000464@lyssa.zhadum.de>
Date: Tue, 12 Aug 2003 20:52:31 +0200 (CEST)
From: Matthias Scheler <tron@colwyn.zhadum.de>
Sender: gnats-bugs-owner@NetBSD.org
Reply-To: tron@colwyn.zhadum.de
To: gnats-bugs@gnats.netbsd.org
Subject: Recent ACPI change broke PS/2 mouse driver
X-Send-Pr-Version: 3.95

>Number:         22457
>Category:       kern
>Synopsis:       Recent ACPI change broke PS/2 mouse driver
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    yamt
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Aug 12 18:53:00 +0000 2003
>Closed-Date:    Wed Aug 13 12:41:32 +0000 2003
>Last-Modified:  Wed Aug 13 12:41:32 +0000 2003
>Originator:     
>Release:        NetBSD 1.6W 2003-08-12 sources
>Organization:
Matthias Scheler                                  http://scheler.de/~matthias/
>Environment:
System: NetBSD lyssa.zhadum.de 1.6W NetBSD 1.6W (LYSSA) #2: Tue Aug 12 20:33:47 CEST 2003 tron@lyssa.zhadum.de:/src/sys/compile/LYSSA i386
Architecture: i386
Machine: i386
>Description:
The last change to "src/sys/arch/i386/include/acpi_func.h" broke ACPI
attachment of the PS/2 mouse driver on my Intel B865PERLK motherboard:

NetBSD 1.6W (LYSSA) #0: Tue Aug 12 10:07:16 CEST 2003
	tron@lyssa.zhadum.de:/src/sys/compile/LYSSA
[...]
acpi0 at mainbus0
acpi0: using Intel ACPI CA subsystem version 20030228
acpi0: X/RSDT: OemId <INTEL ,D865PERL,20030715>, AslId <MSFT,00000097>
acpi0: SCI interrupting at int 9
acpi0: fixed-feature power button present
[...]
pckbc0 at acpi0 (PNP0303): kbd port
pckbc0: io 0x60,0x64 irq 1
[...]
pckbd0 at pckbc0 (kbd slot)
pckbc0: using irq 1 for kbd slot
wskbd0 at pckbd0: console keyboard
pms0 at pckbc0 (aux slot)
pckbc0: unable to establish interrupt for aux slot

This resulted in a stuck keyboard and lots of errors when using the mouse
under XFree86 later:

pckbc: command timeout
pms_enable: command error 35
pckbc: command timeout
pckbc: command timeout
pms_disable: command error
pckbc: command timeout
pms_enable: command error 35
pckbc: command timeout
pms_disable: command error
pckbc: command timeout
pms_enable: command error 35
pckbc: command timeout
pms_disable: command error
pckbc: command timeout
pms_enable: command error 35
pckbc: command timeout
pms_disable: command error

Downgrading "src/sys/arch/i386/include/acpi_func.h" to revision 1.1 fixed
the problem:

pckbc0 at acpi0 (PNP0303): kbd port
pckbc0: io 0x60,0x64 irq 1
pckbc1 at acpi0 (PNP0F03): aux port
pckbc1: irq 12

>How-To-Repeat:
Try to use XFree86 4.3.0 with a PS/2 keyboard and PS/2 mouse which got
attached via ACPI.

>Fix:
None provided.
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: kern-bug-people->yamt 
Responsible-Changed-By: tron 
Responsible-Changed-When: Tue Aug 12 18:53:43 UTC 2003 
Responsible-Changed-Why:  
YAMAMOTO Takashi's change caused this regression. 

From: YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
To: tron@colwyn.zhadum.de
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: kern/22457: Recent ACPI change broke PS/2 mouse driver
Date: Wed, 13 Aug 2003 11:04:38 +0900

 hi,

 does the following patch improve the situation?
 (this bug isn't related to my change, though) 

 YAMAMOTO Takashi


 Index: acpi_func.h
 ===================================================================
 --- acpi_func.h	(revision 262)
 +++ acpi_func.h	(working copy)
 @@ -13,7 +13,7 @@
  	__asm __volatile( \
  	"1:	movl (%1),%%eax		;" \
  	"	movl %%eax,%%edx	;" \
 -	"	andl %2,%%edx		;" \
 +	"	andl %3,%%edx		;" \
  	"	btsl $0x1,%%edx		;" \
  	"	adcl $0x0,%%edx		;" \
  	"	lock			;" \

From: YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
To: tron@colwyn.zhadum.de
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: kern/22457: Recent ACPI change broke PS/2 mouse driver
Date: Wed, 13 Aug 2003 11:14:15 +0900

 > hi,
 > 
 > does the following patch improve the situation?
 > (this bug isn't related to my change, though) 

 and following patch additionally.

 YAMAMOTO Takashi


 Index: acpi_func.h
 ===================================================================
 --- acpi_func.h	(revision 275)
 +++ acpi_func.h	(revision 276)
 @@ -32,7 +32,7 @@
  	int dummy; \
  	__asm __volatile( \
  	"1:	movl (%1),%%eax		;" \
 -	"	andl %2,%%edx		;" \
 +	"	andl %3,%%edx		;" \
  	"	lock			;" \
  	"	cmpxchgl %%edx,(%1)	;" \
  	"	jnz 1b			;" \

From: Matthias Scheler <tron@zhadum.de>
To: YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: kern/22457: Recent ACPI change broke PS/2 mouse driver
Date: Wed, 13 Aug 2003 08:10:30 +0200

 On Wed, Aug 13, 2003 at 11:04:38AM +0900, YAMAMOTO Takashi wrote:
 > does the following patch improve the situation?

 This and your other patch fix the problem indeed:

 pms0 at pckbc0 (aux slot)
 pckbc0: using irq 12 for aux slot

 > (this bug isn't related to my change, though) 

 I tend to disagree here because it was definitely your bug which triggered
 the problem. It might however not really have caused it but only
 uncovered it.

 	Thanks for looking into this

 -- 
 Matthias Scheler                                  http://scheler.de/~matthias/

From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:  
Subject: pr/22457 CVS commit: src/sys/arch/i386/include
Date: Wed, 13 Aug 2003 12:38:36 +0000 (UTC)

 Module Name:	src
 Committed By:	yamt
 Date:		Wed Aug 13 12:38:36 UTC 2003

 Modified Files:
 	src/sys/arch/i386/include: acpi_func.h

 Log Message:
 use correct asm operand indexes.
 (previously 'GLptr' was used as mask.)
 this long standing bug seems to be uncovered by
 my previous change(rev.1.2) on some machines.

 PR/22457 from Matthias Scheler, and tested by him.


 To generate a diff of this commit:
 cvs rdiff -r1.2 -r1.3 src/sys/arch/i386/include/acpi_func.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed 
State-Changed-By: yamt 
State-Changed-When: Wed Aug 13 12:41:18 UTC 2003 
State-Changed-Why:  
fixed 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.