use correct asm operand indexes. (previously 'GLptr' was used as mask.) this long standing bug seems to be uncovered by my previous change(rev.1.2) on some machines.

PR/22457 from Matthias Scheler, and tested by him.